test/good/generics/basic09.px

func f<T>(x: T): T def
    y = x
    return y

print f('t') + f("est")
