test/bad/generics/call09.px

func f<A>(A x: "", A y: "") def
    return

f(['x'])
